Fix mobile nav horizontal overflow issue

--- a/source/js/buyers-guide/components/primary-nav/primary-nav.scss
+++ b/source/js/buyers-guide/components/primary-nav/primary-nav.scss
@@ -59,7 +59,7 @@
   height: 100vh;
   top: 0;
   left: 0;
-  width: 100vw;
+  right: 0;
   background: $white;
   transition: opacity 0.2s, height 0s;
 
